This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.39 (UNRELEASED)

 * Enhancements:
   - Improve random password generation
   - Improve layout of database information window
   - Display database file location in information window

 * Bug fixes:
   - Fixed [icon] text in help file, and license text. (LP: #1314956)

0.38 (2014-04-04)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Added some missing translations (LP: #1300012)

0.37 (2014-02-15)

 * Enhancements:
   - Import scripts now handle folders
   - Updated translations

 * Bug fixes:
   - Fixed KeePass2 import script and added tests

0.36 (2014-02-12)

 * Enhancements:
   - Improved right pane layout
   - Updated translations

 * Bug fixes:

0.35 (2014-02-09)

 * Enhancements:
   - Migrated to Python 3
   - Added translator credits to about dialog (LP: #1273673)
   - Updated translations

 * Bug fixes:

0.34 (2014-01-18)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Fix new PyGI deprecations

0.33 (2013-10-02)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Don't crash when search string ends with a backslash (LP: #1231744)

0.32 (2013-09-26)

 * Enhancements:

 * Bug fixes:
   - Allow search to work on entries in collapsed folders

0.31 (2013-09-26)

 * Enhancements:

 * Bug fixes:
   - Don't crash when attempting to add an entry with nothing selected

0.30 (2013-09-08)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Fix help file location when using python-distutils-extra >= 2.38

0.29 (2013-09-04)

 * Enhancements:
   - Implemented folder expansion saving to database
   - Implemented folder expansion preferences
   - Folder window size is now saved
   - Updated translations

 * Bug fixes:
   - Set icon column sizing to automatic so tree doesn't move around

0.28 (2013-08-15)

 * Enhancements:

 * Bug fixes: