@@ -7,6 +7,7 @@ For a detailed list of changes, please see ChangeLog.
    - Improve random password generation
    - Improve layout of database information window
    - Display database file location in information window
+   - Corrected title in new entry and new folder windows (LP: #1314950)
 
  * Bug fixes:
    - Fixed [icon] text in help file, and license text. (LP: #1314956)
